Common dependencies of WebApi and WebUi (currenly only extensions on top of hamcrest matchers) moved to SelenideFour project. SelenideFour project converted to module.